Made scrollbar always visible to avoid shifting on page change.

--- a/css/todolist.css
+++ b/css/todolist.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 .badge-tasks-remaining {
     background-color: red;
 }
